# SDIZO-project2

./: README.md
projekt/: CMakeLists.txt
projekt/algorithms/: BellmanFord.cpp  Dijkstra.cpp  Kruskal.cpp  Prim.cpp
projekt/headers/: Algorithm.h  BellmanFord.h  Dijkstra.h  GraphGenerator.h  Kruskal.h  Menu.h  Prim.h
projekt/loadFiles/: dane_droga  dane_droga_BF  dane_flow  dane_mst  dane_mst2  graf  grag
projekt/main/: GraphGenerator.cpp  Menu.cpp  main.cpp
projekt/resultsFiles/: resultsBellmanFord  resultsDijkstra  resultsKruskal  resultsPrim
